--- a/src/variables.scss
+++ b/src/variables.scss
@@ -99,7 +99,7 @@ $background: #fcfcfc;
 @mixin content {
     font-weight: 300;
     @include fz-text-basic;
-    text-align:justify;
+    //text-align:justify;
 }
 
 @mixin img {
